syntax = "proto3";
package cosmos.sanction.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/sanction/v1beta1/sanction.proto";
import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/sanction";

// Deprecated: This package has moved to provenance/sanction/v1.

// Query defines the gRPC querier service.
//
// Deprecated: Switch to provenance/sanction/v1.
service Query {
  // IsSanctioned checks if an account has been sanctioned.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  rpc IsSanctioned(QueryIsSanctionedRequest) returns (QueryIsSanctionedResponse) {
    option (google.api.http).get = "/cosmos/sanction/v1beta1/check/{address}";
  }

  // SanctionedAddresses returns a list of sanctioned addresses.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  rpc SanctionedAddresses(QuerySanctionedAddressesRequest) returns (QuerySanctionedAddressesResponse) {
    option (google.api.http).get = "/cosmos/sanction/v1beta1/all";
  }

  // TemporaryEntries returns temporary sanction/unsanction info.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  rpc TemporaryEntries(QueryTemporaryEntriesRequest) returns (QueryTemporaryEntriesResponse) {
    option (google.api.http).get = "/cosmos/sanction/v1beta1/temp";
  }

  // Params returns the sanction module's params.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos/sanction/v1beta1/params";
  }
}

// QueryIsSanctionedRequest defines the RPC request for checking if an account is sanctioned.
//
// Deprecated: Switch to provenance/sanction/v1.
message QueryIsSanctionedRequest {
  option deprecated = true;

  // Deprecated: Switch to provenance/sanction/v1.
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
}

// QueryIsSanctionedResponse defines the RPC response of an IsSanctioned query.
//
// Deprecated: Switch to provenance/sanction/v1.
message QueryIsSanctionedResponse {
  option deprecated = true;

  // is_sanctioned is true if the address is sanctioned.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  bool is_sanctioned = 1 [deprecated = true];
}

// QuerySanctionedAddressesRequest defines the RPC request for listing sanctioned accounts.
//
// Deprecated: Switch to provenance/sanction/v1.
message QuerySanctionedAddressesRequest {
  option deprecated = true;

  // pagination defines an optional pagination for the request.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  cosmos.base.query.v1beta1.PageRequest pagination = 99 [deprecated = true];
}

// QuerySanctionedAddressesResponse defines the RPC response of a SanctionedAddresses query.
//
// Deprecated: Switch to provenance/sanction/v1.
message QuerySanctionedAddressesResponse {
  option deprecated = true;

  // addresses is the list of sanctioned account addresses.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  repeated string addresses = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];

  // pagination defines the pagination in the response.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  cosmos.base.query.v1beta1.PageResponse pagination = 99 [deprecated = true];
}

// QueryTemporaryEntriesRequest defines the RPC request for listing temporary sanction/unsanction entries.
//
// Deprecated: Switch to provenance/sanction/v1.
message QueryTemporaryEntriesRequest {
  option deprecated = true;

  // address is an optional address to restrict results to.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];

  // pagination defines an optional pagination for the request.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  cosmos.base.query.v1beta1.PageRequest pagination = 99 [deprecated = true];
}

// QueryTemporaryEntriesResponse defines the RPC response of a TemporaryEntries query.
//
// Deprecated: Switch to provenance/sanction/v1.
message QueryTemporaryEntriesResponse {
  option deprecated = true;

  // Deprecated: Switch to provenance/sanction/v1.
  repeated TemporaryEntry entries = 1 [deprecated = true];

  // pagination defines the pagination in the response.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  cosmos.base.query.v1beta1.PageResponse pagination = 99 [deprecated = true];
}

// QueryParamsRequest defines the RPC request for getting the sanction module params.
//
// Deprecated: Switch to provenance/sanction/v1.
message QueryParamsRequest {
  option deprecated = true;
}

// QueryParamsResponse defines the RPC response of a Params query.
//
// Deprecated: Switch to provenance/sanction/v1.
message QueryParamsResponse {
  option deprecated = true;

  // params are the sanction module parameters.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  Params params = 1 [deprecated = true];
}